--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+beautifulsoup4==4.8.1
 Django==2.2.6
+django-bootstrap4==1.0.1
 django-crispy-forms==1.8.0
 djangorestframework==3.10.3
 pytz==2019.3
+soupsieve==1.9.5
 sqlparse==0.3.0
