--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-geopy
 beautifulsoup4==4.8.1
+dj-database-url==0.5.0
 Django==2.2.6
 django-bootstrap4==1.0.1
 django-crispy-forms==1.8.0
 djangorestframework==3.10.3
+geographiclib==1.50
+geopy==1.20.0
+gunicorn==20.0.4
+numpy==1.17.3
+psycopg2==2.8.4
 pytz==2019.3
 soupsieve==1.9.5
 sqlparse==0.3.0
+whitenoise==4.1.4
