--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==2.2.6
 django-bootstrap4==1.0.1
 django-crispy-forms==1.8.0
+django-heroku==0.3.1
 djangorestframework==3.10.3
 geographiclib==1.50
 geopy==1.20.0
