--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+asgiref==3.2.3
 beautifulsoup4==4.8.1
 dj-database-url==0.5.0
-Django==2.2.6
+Django==3.0
 django-bootstrap4==1.0.1
 django-crispy-forms==1.8.0
 django-heroku==0.3.1
